# Raytracer

./: .gitignore  CMakeLists.txt  README.md  build.sh  cleaner.sh  run.sh  uml.sh
.github/workflows/: compile_check.yml  doxygen.yml  static_analysis.yml
assets/plantuml/: plantuml.puml
assets/scene/: anamorphose_ballguy.json  chess.json  chess_with_chess.json  computer.json  cone.json  cylinder.json  light_and_ground.json  mirror.json  monkey.json  purple.json  scene1.json  scene1_cone.json  scene1_transformations.json  scene_test_cylinder.json  subject.conf  subject.json  tree.json
doc/: scene_creation.md
src/: ALight.hpp  ArgumentsLoader.cpp  ArgumentsLoader.hpp  Camera.cpp  Camera.hpp  Color.cpp  Color.hpp  HitRecord.cpp  HitRecord.hpp  ILight.hpp  Image.hpp  Interval.hpp  Main.cpp  Main.hpp  Math.hpp  ObjLoader.cpp  ObjLoader.hpp  Parameters.cpp  Parameters.hpp  Plane.cpp  Plane.hpp  Ray.cpp  Ray.hpp  Sphere.hpp  Vector3D.hpp
src/Factories/: CameraFactory.cpp  CameraFactory.hpp  ColorFactory.cpp  ColorFactory.hpp  MaterialFactory.cpp  MaterialFactory.hpp  PlaneFactory.cpp  PlaneFactory.hpp  SphereFactory.cpp  SphereFactory.hpp  TextureFactory.cpp  TextureFactory.hpp  TriangleFactory.cpp  TriangleFactory.hpp  WorldCreator.cpp  WorldCreator.hpp
src/Lights/: ILight.hpp  LightPoint.hpp
src/Materials/: AMaterial.hpp  BaseMaterial.hpp  IMaterial.hpp  LightMaterial.hpp  MetalMaterial.hpp
src/Math/: AABB.hpp  Interval.cpp  Interval.hpp  MathsUtils.hpp  Matrix3D.cpp  Matrix3D.hpp  Point2D.hpp  Point3D.cpp  Point3D.hpp  Random.cpp  Random.hpp  Rectangle3D.cpp  Rectangle3D.hpp  Vector2D.hpp  Vector3D.cpp  Vector3D.hpp  Xoroshiro.hpp
src/Primitives/: Cone.cpp  Cone.hpp  Cylinder.cpp  Cylinder.hpp  IPrimitive.hpp  Object.hpp  Plane.cpp  Plane.hpp  Sphere.cpp  Sphere.hpp  Triangle.cpp  Triangle.hpp  (+2 more)
(+32 files in other folders)
